hphp/hack/test/typecheck/expression_trees/static_static_method_call.php.exp
File "static_static_method_call.php", line 11, characters 22-39:
Static method calls in expression trees require explicit class names. (Parsing[1002])
File "static_static_method_call.php", line 11, characters 34-38:
Invalid argument (Typing[4110])
  File "static_static_method_call.php", line 7, characters 5-18:
  Expected `ExampleContext`
  File "static_static_method_call.php", line 11, characters 34-38:
  But got `string`
