hphp/hack/test/typecheck/expression_trees/static_static_method_call.php
<?hh

<<file:__EnableUnstableFeatures('expression_trees')>>

abstract class MyClass {
  public abstract static function bar(
    ExampleContext $_,
  ): Awaitable<ExprTree<Code, Code::TAst, (function(ExampleString): ExampleInt)>>;

  public function test(): void {
    $fun_call = Code`static::bar("baz")`;
  }
}
